NEW - bug 204072: order of the actions icons in the task editor https://bugs.eclipse.org/bugs/show_bug.cgi?id=204072

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -101,13 +101,14 @@ at the 2.0 quality level or because they are experimental features.</p>
 			Subtask improvements (properly nested now, on by default)<p class="MsoPlainText">
 			JIRA new subtask actions and editor<p class="MsoPlainText">
 			Clone task action added<p class="MsoPlainText">
-			Task import and export<p class="MsoPlainText">
+			Task import and export (Linux/Mac users: you must save as .xml.zip)<p class="MsoPlainText">
 			Improved action enablement (focus, more/less interesting), automatic 
 			disabling and hiding<p class="MsoPlainText">
 			Filtering improvements: focus action will disable other 
 			filtering/linking actions<p class="MsoPlainText">
 			Additional editor management option, recommended to turn on but off 
-			by default, previous option now on by default</td>
+			by default, previous option now on by default<p class="MsoPlainText">
+			Update site changes</td>
 		</tr>
 		<tr>
 			<td colspan="2">
