RESOLVED - bug 203097: editor icons should match Task List icons https://bugs.eclipse.org/bugs/show_bug.cgi?id=203097

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -108,7 +108,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 			filtering/linking actions<p class="MsoPlainText">
 			Additional editor management option, recommended to turn on but off 
 			by default, previous option now on by default<p class="MsoPlainText">
-			Update site changes</td>
+			Update site changes<p class="MsoPlainText">
+			Task kind decorations in editor tabs</td>
 		</tr>
 		<tr>
 			<td colspan="2">
