RESOLVED - bug 195727: warn user about close being mapped to "remove from context" on first editor close https://bugs.eclipse.org/bugs/show_bug.cgi?id=195727

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -103,7 +103,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 			Clone task action added<p class="MsoPlainText">
 			Task import and export (Linux/Mac users: you must save as .xml.zip)<p class="MsoPlainText">
 			Improved action enablement (focus, more/less interesting), automatic 
-			disabling and hiding<p class="MsoPlainText">
+			disabling and hiding.&nbsp; Landmarking only shows where it is 
+			possible to do.<p class="MsoPlainText">
 			Filtering improvements: focus action will disable other 
 			filtering/linking actions<p class="MsoPlainText">
 			Additional editor management option, recommended to turn on but off 
