--- a/new/new.html
+++ b/new/new.html
@@ -12,7 +12,19 @@
 		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
 	</tr>
 	<tr>
-		<td bgcolor="#FAF7FB"><font size="1">2.1M1<br>
+		<td bgcolor="#E0D0E6"><font size="1">2.1<br>
+		<i>Sep 28</i></font></td>
+		<td bgcolor="#E0D0E6" align="center">
+		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=XML&component=XPlanner&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2007-08-29&chfieldto=2007-09-28&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
+		<font size="1">167</font><br><font size="1">bugs</font></a></td>
+		<td bgcolor="#E0D0E6"><font size="1">Jevgeni Holodkov added new import 
+		and export functionality. Shawn Minto provided several fixes for the 
+		Task List.&nbsp; Maarten Meijer added task cloning support. Helen 
+		Bershadskaya improved the XPlanner connector and Leo Dos Santos fixed 
+		export for Mac.</font></td>
+	</tr>
+	<tr>
+		<td bgcolor="#FAF7FB"><font size="1">2.1M<br>
 		<i>Aug 27</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=XML&component=XPlanner&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2007-07-01&chfieldto=2007-08-28&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
@@ -80,7 +92,153 @@ at the 2.0 quality level or because they are experimental features.</p>
 -->
 <hr>
 
+<p>&nbsp;</p>
+<h2><a name="task-list5">Task-Focused UI</a></h2>
+
+<table cellpadding="10" cellspacing="0" id="table370">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Filtering and Linking Management</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p class="MsoPlainText">When a view is Focused on the active task, 
+			it's manual linking and filtering facilities are disabled.&nbsp; 
+			This is now made explicit in the UI of views including the Package 
+			Explorer, Project Explorer and Navigator.&nbsp; This also ensures 
+			that the view cannot be put into an inconsistent state by having 
+			some of it's filters enabled when in Focused mode.&nbsp; When Focus 
+			is toggled off or the task is deactivated the manual linking and 
+			filtering will be re-enabled and restored to their previous state.<p class="MsoPlainText">
+			<img border="0" src="images/2.1/focus-linking-disable.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table369">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Alt+click and Popup Menu Improvements</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p class="MsoPlainText">Since the 
+			<a href="http://wiki.eclipse.org/index.php/Mylyn_User_Guide#Alt.2BClick_navigation">
+			Alt+click navigation</a> mechanism is a new concept and has not been 
+			discoverable enough, this action can now be invoked via the popup 
+			menu as well.&nbsp; Note that this action is only visible when a 
+			task is active.&nbsp; It is currently limited to Java elements.&nbsp; 
+			In addition, the <i>Remove from Context</i> and <i>Mark as Landmark</i> 
+			actions have moved to a more appropriate position in the popup menu, 
+			and will only show when a task is active, and only on the elements 
+			that they apply to.&nbsp; For example, a project cannot be made a 
+			landmark, and as visible below no longer shows this action. <p class="MsoPlainText">
+			<img border="0" src="images/2.1/show-filtered.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table368">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Editor Management Configuration</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p class="MsoPlainText">A frequent complaint upon first use of the 
+			Task-Focused UI was the fact that files are automatically removed 
+			from the task context when they are closed. This facility can now be 
+			disabled independently of the editor management which restores 
+			editors and ensures that elements whose interest had decayed have 
+			their editors closed, preventing open editor bloat.&nbsp; Removing 
+			files from context on close is still recommended because it ensures 
+			that the open editors match the task context. <p class="MsoPlainText">
+			<img border="0" src="images/2.1/context-preferences.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<h2>&nbsp;</h2>
 <h2><a name="task-list">Task List</a></h2>
+
+<table cellpadding="10" cellspacing="0" id="table365">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Subtask Improvements</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p class="MsoPlainText">Support for subtasks has been improved and 
+			is now on by default for all connectors including Bugzilla.&nbsp; 
+			Note that for Bugzilla the &quot;depends on&quot; attribute is used for 
+			subtask grouping.<p class="MsoPlainText">
+			<img border="0" src="images/2.1/subtasks-option.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table367">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Import, Export and Cloning</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p class="MsoPlainText">In addition to being able to Import/Export 
+			your entire<i> Task List</i>, individual tasks and queries can now 
+			be imported and exported to a zip file.&nbsp; Exported tasks will 
+			include task contexts, and importing a repository task or query will 
+			automatically import the corresponding<i> Task Repository</i> if it 
+			does not exist.&nbsp; Import and Export can also be performed via 
+			drag-and-drop to and from external windows.&nbsp; <p class="MsoPlainText">
+			<img border="0" src="images/2.1/tasklist-import-export.png"><p class="MsoPlainText">
+			Both tasks and queries can now be cloned.&nbsp; Cloning of queries 
+			allows you to easily modify an existing query.&nbsp; Cloning of 
+			tasks will bring up a new <i>Task Editor </i>that contains 
+			information about the task being cloned.&nbsp; Note that this can be 
+			done across <i>Task Repositories</i> (e.g., from Bugzilla to JIRA, 
+			as visible below).<p class="MsoPlainText">
+			<img border="0" src="images/2.1/tasks-clone.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table371">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Popup Menu Improvements</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p class="MsoPlainText">The <i>Schedule for</i> menu now uses <i>Not 
+			Scheduled</i> instead of <i>Clear</i> action so that it can indicate 
+			when a task has not been scheduled. The <i>New</i> menu now provides 
+			a shortcut for creating local tasks without a wizard.&nbsp; The 
+			keyboard shortcut for this is the Insert key on Platforms that 
+			support it, or Alt+Shift+N, T on all platforms (note that this might 
+			require resetting the <i>Perspective</i> in order to see the new 
+			Mylyn actions). </td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
 
 <table cellpadding="10" cellspacing="0" id="table355">
 		<tr>
@@ -120,6 +278,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 		</tr>
 </table>
 
+<h2>&nbsp;</h2>
 <h2><a name="task-list2">Task Editor</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table353">
@@ -184,7 +343,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <p class="MsoPlainText">&nbsp; </p>
 
-<h2><a name="task-list1">Bugzilla Connector (Incubation)</a></h2>
+<h2><a name="task-list1">Bugzilla Connector</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table361">
 		<tr>
@@ -261,6 +420,29 @@ at the 2.0 quality level or because they are experimental features.</p>
 </table>
 
 <p class="MsoPlainText">&nbsp; </p>
+<h2><a name="task-list4">JIRA</a></h2>
+
+<table cellpadding="10" cellspacing="0" id="table366">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Subtask Creation</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p class="MsoPlainText">Support for JIRA subtasks has been improved, 
+			and these can be created both from the<i> Task Editor</i> toolbar:<i>
+			</i><p class="MsoPlainText">
+			<img border="0" src="images/2.1/jira-subtask-create-editor.png"><p class="MsoPlainText">
+			and from the popup menu in the <i>Task List</i>:<p class="MsoPlainText">
+			<img border="0" src="images/2.1/jira-subtask-create.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<p class="MsoPlainText">&nbsp;</p>
 <h2><a name="task-list0">XPlanner Connector (Incubation)</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table356">
