ASSIGNED - bug 194875: manage eclipse.org/mylyn web site content https://bugs.eclipse.org/bugs/show_bug.cgi?id=194875

--- a/new/new.html
+++ b/new/new.html
@@ -51,7 +51,7 @@ Mylyn 0.5</a>,&nbsp;
 <a href="http://eclipse.org/mylyn/new/new-0.4.html">Mylyn 0.4</a>, <a href="http://eclipse.org/mylyn/new/new-0.3.html">
 Mylyn 0.3</a></b></p>
 <p><b>Updating</b>:&nbsp; If using a version prior to 2.0, must upgrade to 2.0 
-before installing Mylyn 2.1M1.</p>
+before installing Mylyn 2.1.</p>
 
 <!--
 
@@ -92,7 +92,6 @@ at the 2.0 quality level or because they are experimental features.</p>
 -->
 <hr>
 
-<p>&nbsp;</p>
 <h2><a name="task-list">Task List</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table365">
@@ -421,7 +420,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 		</tr>
 </table>
 
-<p class="MsoPlainText">&nbsp; </p>
+<p class="MsoPlainText">&nbsp;</p>
 <h2><a name="task-list4">JIRA</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table366">
