RESOLVED - bug 205730: Make it easier to take a screenshot from non-eclipse window https://bugs.eclipse.org/bugs/show_bug.cgi?id=205730

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -113,6 +113,9 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<p class="MsoPlainText">The screenshot attachment wizard has 
 				been improved and is now non-modal, making it easier to capture 
 				screenshots of the workbench.</li>
+				<li>
+				<p class="MsoPlainText">Attachments table shows file names and a 
+				different icon for images</li>
 			</ul>
 			<p class="MsoPlainText">
 			&nbsp;</td>
