RESOLVED - bug 205538: Clicking active task hyperlink results in go up to root https://bugs.eclipse.org/bugs/show_bug.cgi?id=205538

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -12,12 +12,21 @@
 		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
 	</tr>
 	<tr>
-		<td bgcolor="#E0D0E6"><font size="1">2.1<br>
-		<i>Sep 28</i></font></td>
+		<td bgcolor="#E0D0E6"><font size="1">2.2<br>
+		<i>Dec 19, 2007</i></font></td>
 		<td bgcolor="#E0D0E6" align="center">
+		<i>
+		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=XML&component=XPlanner&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2007-09-29&chfieldto=2007-12-20&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
+		<font size="1">?</font><br><font size="1">bugs</font></a></i></td>
+		<td bgcolor="#E0D0E6"><i><font size="1">IN PROGRESS</font></i></td>
+	</tr>
+	<tr>
+		<td bgcolor="#FAF7FB"><font size="1">2.1<br>
+		<i>Sep 28, 2007</i></font></td>
+		<td bgcolor="#FAF7FB" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=XML&component=XPlanner&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2007-08-29&chfieldto=2007-09-28&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
 		<font size="1">167</font><br><font size="1">bugs</font></a></td>
-		<td bgcolor="#E0D0E6"><font size="1">Jevgeni Holodkov added new import 
+		<td bgcolor="#FAF7FB"><font size="1">Jevgeni Holodkov added new import 
 		and export functionality. Shawn Minto provided several fixes for the 
 		Task List.&nbsp; Maarten Meijer added task cloning support. Helen 
 		Bershadskaya improved the XPlanner connector and Leo Dos Santos fixed 
@@ -25,7 +34,7 @@
 	</tr>
 	<tr>
 		<td bgcolor="#FAF7FB"><font size="1">2.1M<br>
-		<i>Aug 27</i></font></td>
+		<i>Aug 27, 2007</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&component=Bugzilla&component=Core&component=Doc&component=Java&component=Jira&component=Monitor&component=Tasks&component=Trac&component=UI&component=Web&component=XML&component=XPlanner&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&bug_status=RESOLVED&bug_status=VERIFIED&bug_status=CLOSED&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=2007-07-01&chfieldto=2007-08-28&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
 		<font size="1">295</font><br><font size="1">bugs</font></a></td>
@@ -92,11 +101,41 @@ at the 2.0 quality level or because they are experimental features.</p>
 -->
 <hr>
 
+<p>&nbsp; </p>
+
+<table cellpadding="10" cellspacing="0" id="table372">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b><i>IN PROGRESS</i></b></p>
+			</td>
+			<td valign="top" width="70%">
+			Task Editor<ul>
+				<li>Improved screenshot capture and attachment functionality, 
+				uses non-modal wizard so that Eclipse can be interacted with 
+				while taking screenshots.</li>
+				<li>The attachments table includes filenames and distinguishes 
+				images</li>
+			</ul>
+			<p>Bugzilla Connector</p>
+			<ul>
+				<li>Support for real names in addition to email addresses (Bugzilla 
+				3.0 and later)</li>
+			</ul>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<h2>&nbsp;</h2>
 <h2><a name="task-list">Task List</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table365">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Subtask Improvements</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -115,7 +154,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table367">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Import, Export and Cloning</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -144,7 +183,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table371">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Popup Menu Improvements</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -207,7 +246,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table369">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Alt+click and Popup Menu Improvements</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -232,7 +271,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table370">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Filtering and Linking Management</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -256,7 +295,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table368">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Editor Management Configuration</b></p>
 			</td>
 			<td valign="top" width="70%">
@@ -425,7 +464,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 
 <table cellpadding="10" cellspacing="0" id="table366">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<td align="left" valign="top" width="15%" bgcolor=#FAF7FB>
 			<p align="right"><b>Subtask Creation</b></p>
 			</td>
 			<td valign="top" width="70%">
