RESOLVED - bug 205945: Need to stop mylyn removing interesting items https://bugs.eclipse.org/bugs/show_bug.cgi?id=205945

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -109,7 +109,13 @@ at the 2.0 quality level or because they are experimental features.</p>
 			<p align="right"><b><i>IN PROGRESS</i></b></p>
 			</td>
 			<td valign="top" width="70%">
-			Task Editor<ul>
+			Task Context<ul>
+				<li>Context tab on task editor will now show all elements in the 
+				task context if slid to the left, even ones with very low 
+				interest (i.e. those that decayed in interest long ago)</li>
+			</ul>
+			<p>Task Editor</p>
+			<ul>
 				<li>Improved screenshot capture and attachment functionality, 
 				uses non-modal wizard so that Eclipse can be interacted with 
 				while taking screenshots.</li>
