NEW - bug 206970: [patch] render quoted comments in a different color https://bugs.eclipse.org/bugs/show_bug.cgi?id=206970

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -121,6 +121,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				while taking screenshots.</li>
 				<li>The attachments table includes filenames and distinguishes 
 				images</li>
+				<li>Comments are colored differently</li>
 			</ul>
 			<p>Bugzilla Connector</p>
 			<ul>
