--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -121,7 +121,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 				while taking screenshots.</li>
 				<li>The attachments table includes filenames and distinguishes 
 				images</li>
-				<li>Comments are colored differently</li>
+				<li>Comment quotations are colored in order to make them easier 
+				to differentiate.</li>
 			</ul>
 			<p>Bugzilla Connector</p>
 			<ul>
