NEW - bug 175318: [patch] support alternate groupings of tasks https://bugs.eclipse.org/bugs/show_bug.cgi?id=175318

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -129,6 +129,10 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Support for real names in addition to email addresses (Bugzilla 
 				3.0 and later)</li>
 			</ul>
+			<p>JIRA Connector</p>
+			<ul>
+				<li>Can change assignee on creation</li>
+			</ul>
 			</td>
 		</tr>
 		<tr>
