RESOLVED - bug 201144: [patch] [context] support focusing the Bookmarks view https://bugs.eclipse.org/bugs/show_bug.cgi?id=201144

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -113,6 +113,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Context tab on task editor will now show all elements in the 
 				task context if slid to the left, even ones with very low 
 				interest (i.e. those that decayed in interest long ago)</li>
+				<li>Focus works in Bookmarks view</li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
