RESOLVED - bug 208619: Alt+Click doesn't work in the common navigator https://bugs.eclipse.org/bugs/show_bug.cgi?id=208619

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -114,6 +114,15 @@ at the 2.0 quality level or because they are experimental features.</p>
 				task context if slid to the left, even ones with very low 
 				interest (i.e. those that decayed in interest long ago)</li>
 				<li>Focus works in Bookmarks view</li>
+				<li>Alt+click unfiltering returns on first non Alt+click mouse 
+				click in the view, preventing the uninteresting stuff from 
+				getting 'stuck'</li>
+			</ul>
+			<p>Task List</p>
+			<ul>
+				<li>New keybindings, need to review or revise,
+				<a href="http://wiki.eclipse.org/Mylyn_UI_Nits#Keybindings">
+				http://wiki.eclipse.org/Mylyn_UI_Nits#Keybindings</a> </li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
@@ -133,6 +142,10 @@ at the 2.0 quality level or because they are experimental features.</p>
 			<p>JIRA Connector</p>
 			<ul>
 				<li>Can change assignee on creation</li>
+			</ul>
+			<p>Team</p>
+			<ul>
+				<li>Commit templates can be stored per-project</li>
 			</ul>
 			</td>
 		</tr>
