--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -110,6 +110,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 			</td>
 			<td valign="top" width="70%">
 			Task Context<ul>
+				<li>Model has been tuned to avoid having containers such as 
+				packages show on very long-running tasks.</li>
 				<li>Context tab on task editor will now show all elements in the 
 				task context if slid to the left, even ones with very low 
 				interest (i.e. those that decayed in interest long ago)</li>
@@ -123,6 +125,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>New keybindings, need to review or revise,
 				<a href="http://wiki.eclipse.org/Mylyn_UI_Nits#Keybindings">
 				http://wiki.eclipse.org/Mylyn_UI_Nits#Keybindings</a> </li>
+				<li>Notification popups now fade in and out (Eclipse 3.4 only)</li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
