RESOLVED - bug 208275: [patch] Task, Category and Repository should fill the standard Properties view: https://bugs.eclipse.org/bugs/show_bug.cgi?id=208275

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -150,6 +150,10 @@ at the 2.0 quality level or because they are experimental features.</p>
 			<ul>
 				<li>Commit templates can be stored per-project</li>
 			</ul>
+			<p>Developers</p>
+			<ul>
+				<li>The Properties page works for Task List element</li>
+			</ul>
 			</td>
 		</tr>
 		<tr>
