RESOLVED - bug 152869: allow to create new issues from JUnit stack trace https://bugs.eclipse.org/bugs/show_bug.cgi?id=152869

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -126,6 +126,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<a href="http://wiki.eclipse.org/Mylyn_UI_Nits#Keybindings">
 				http://wiki.eclipse.org/Mylyn_UI_Nits#Keybindings</a> </li>
 				<li>Notification popups now fade in and out (Eclipse 3.4 only)</li>
+				<li>Create tasks from a JUnit stack trace</li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
