--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -127,6 +127,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				http://wiki.eclipse.org/Mylyn_UI_Nits#Keybindings</a> </li>
 				<li>Notification popups now fade in and out (Eclipse 3.4 only)</li>
 				<li>Create tasks from a JUnit stack trace</li>
+				<li>Screenshot capture tool improvements</li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
