NEW - bug 210320: group working sets by task repository in selection dialog https://bugs.eclipse.org/bugs/show_bug.cgi?id=210320

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -128,6 +128,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Notification popups now fade in and out (Eclipse 3.4 only)</li>
 				<li>Create tasks from a JUnit stack trace</li>
 				<li>Screenshot capture tool improvements</li>
+				<li>Working set query selection is grouped by repository (minor)</li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
