--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -128,7 +128,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Notification popups now fade in and out (Eclipse 3.4 only)</li>
 				<li>Create tasks from a JUnit stack trace</li>
 				<li>Screenshot capture tool improvements</li>
-				<li>Working set query selection is grouped by repository (minor)</li>
+				<li>Working set query selection is grouped by repository for 
+				both tasks and resources</li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
