--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -140,6 +140,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				images</li>
 				<li>Comment quotations are colored in order to make them easier 
 				to differentiate.</li>
+				<li>Can create new tasks from comments (and other selections?)</li>
 			</ul>
 			<p>Bugzilla Connector</p>
 			<ul>
