REOPENED - bug 210320: group working sets by task repository in working set edit dialog https://bugs.eclipse.org/bugs/show_bug.cgi?id=210320

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -130,6 +130,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Screenshot capture tool improvements</li>
 				<li>Working set query selection is grouped by repository for 
 				both tasks and resources</li>
+				<li>Archive visibility has been improved when working set is 
+				active [nesting Archive by repository might be necessary]</li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
