RESOLVED - bug 207659: [performance] optimize AbstractTaskContainer.contains() https://bugs.eclipse.org/bugs/show_bug.cgi?id=207659

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -132,6 +132,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				both tasks and resources</li>
 				<li>Archive visibility has been improved when working set is 
 				active [nesting Archive by repository might be necessary]</li>
+				<li>Performance improvements</li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
