--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -133,6 +133,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Archive visibility has been improved when working set is 
 				active [nesting Archive by repository might be necessary]</li>
 				<li>Performance improvements</li>
+				<li>Single-click to switch presentations</li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
