NEW - bug 210800: make the workweek progress bar correspond to the selected working sets https://bugs.eclipse.org/bugs/show_bug.cgi?id=210800

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -134,6 +134,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 				active [nesting Archive by repository might be necessary]</li>
 				<li>Performance improvements</li>
 				<li>Single-click to switch presentations</li>
+				<li>Tool tip improvements: hover over active task link to see 
+				detailed tooltip</li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
