NEW - bug 204762: Task query shows incoming changes when there are none https://bugs.eclipse.org/bugs/show_bug.cgi?id=204762

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -136,6 +136,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Single-click to switch presentations</li>
 				<li>Tool tip improvements: hover over active task link to see 
 				detailed tooltip</li>
+				<li>Create subtasks in Bugzilla (new editor menu action)</li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
