--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -137,6 +137,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Tool tip improvements: hover over active task link to see 
 				detailed tooltip</li>
 				<li>Create subtasks in Bugzilla (new editor menu action)</li>
+				<li>Open Task dialog performance and usability improvements</li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
