--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -138,6 +138,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				detailed tooltip</li>
 				<li>Create subtasks in Bugzilla (new editor menu action)</li>
 				<li>Open Task dialog performance and usability improvements</li>
+				<li>New Desktop notification popups</li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
