NEW - bug 209407: [patch] support grouping of hits in the Search view https://bugs.eclipse.org/bugs/show_bug.cgi?id=209407

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -139,6 +139,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Create subtasks in Bugzilla (new editor menu action)</li>
 				<li>Open Task dialog performance and usability improvements</li>
 				<li>New Desktop notification popups</li>
+				<li>Search results can be grouped by owner</li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
