--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -156,6 +156,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 			<ul>
 				<li>Support for real names in addition to email addresses (Bugzilla 
 				3.0 and later)</li>
+				<li>Negative expressions for queries</li>
 			</ul>
 			<p>JIRA Connector</p>
 			<ul>
