RESOLVED - bug 208265: [patch] [context] Mylyn is not auto-closing editors https://bugs.eclipse.org/bugs/show_bug.cgi?id=208265

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -138,8 +138,10 @@ at the 2.0 quality level or because they are experimental features.</p>
 				detailed tooltip</li>
 				<li>Create subtasks in Bugzilla (new editor menu action)</li>
 				<li>Open Task dialog performance and usability improvements</li>
-				<li>New Desktop notification popups</li>
+				<li>New Desktop notification popups, enable OpenGL on Linux for 
+				fading</li>
 				<li>Search results can be grouped by owner</li>
+				<li>Repository properties menu</li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
