RESOLVED - bug 208702: support Alt+ double click and Ctrl+click https://bugs.eclipse.org/bugs/show_bug.cgi?id=208702

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -118,7 +118,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Focus works in Bookmarks view</li>
 				<li>Alt+click unfiltering returns on first non Alt+click mouse 
 				click in the view, preventing the uninteresting stuff from 
-				getting 'stuck'</li>
+				getting 'stuck'.&nbsp; Ctrl+click is supported after Alt+click 
+				has been used, in order to add multiple elements.</li>
 			</ul>
 			<p>Task List</p>
 			<ul>
