RESOLVED - bug 204951: Focus view action disabled in the "on" position when task activation doesn't manage focus filters https://bugs.eclipse.org/bugs/show_bug.cgi?id=204951

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -143,6 +143,7 @@ at the 2.0 quality level or because they are experimental features.</p>
 				fading</li>
 				<li>Search results can be grouped by owner</li>
 				<li>Repository properties menu</li>
+				<li>Archive: ensure to point out new deletion</li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
