RESOLVED - bug 213563: move graphics out of org.eclipse.mylyn https://bugs.eclipse.org/bugs/show_bug.cgi?id=213563

--- a/new/new-dev.html
+++ b/new/new-dev.html
@@ -144,6 +144,8 @@ at the 2.0 quality level or because they are experimental features.</p>
 				<li>Search results can be grouped by owner</li>
 				<li>Repository properties menu</li>
 				<li>Archive: ensure to point out new deletion</li>
+				<li>Warnings on queries</li>
+				<li>Improved Link with Editor behavior [review]</li>
 			</ul>
 			<p>Task Editor</p>
 			<ul>
